glibc (2.3.2-5) unstable; urgency=low

  * Phil Blundell <pb@debian.org>
    - debian/control: change section for -pic, -dbg, -prof packages
      from devel to libdevel.

  * GOTO Masanori <gotom@debian.org>

    - debian/control.in/libc: Add more missing change section for -pic,
      -dbg, -prof packages from devel to libdevel.
    - debian/control.in/libc-dbg: likewise.

    - debian/patches/80_glibc232-locales-header.dpatch: Fix an_ES,
      wa_BE, yi_US localedata header.  (Closes: #194289)

 -- Philip Blundell <pb@nexus.co.uk>  Tue, 26 Aug 2003 22:51:03 +0100

glibc (2.3.2-4) unstable; urgency=low

  * Jeff Bailey <jbailey@nisa.net>
    - debian/locales/DEBIAN/postinst: Use tail -n 1 instead of tail -1.
      Thanks to Jurij Smakov (Closes: #206464)

  * Phil Blundell <pb@debian.org>
    - debian/patches/glibc23-arm-waitpid.dpatch: deleted.
    - for arm, Build-Depend on kernel-headers 2.4.19-4 or newer.
      (Closes: #206895)
    - debian/patches/revert-old-libio.dpatch: back out changes causing
      problems with fseek in binaries linked with glibc 2.0.
      (Closes: #206839)
    - debian/libc/DEBIAN/postinst: also restart cucipop (Closes: #206783)
    - debian/patches/arm-output-format.dpatch: Very bad hack to avoid
      problem with libc.so on ARM until a proper fix is forthcoming.
    - debian/patches/81_glibc232-utimes-fix.dpatch: replace with version
      that applies cleanly to current sources.
    - debian/control: require sed 4.0.5-4 or later.

  * GOTO Masanori <gotom@debian.org>

    - debian/po/es.po: Updated Spanish (es) debconf template.
      Patched by Carlos Valdivia Yagüe <valyag@dat.etsit.upm.es>.
    - debian/patches/81_glibc232-utimes-fix.dpatch: Fix utimes wrong time
      calculation.  Patched by Paul Eggert <eggert@CS.UCLA.EDU>.
      (Closes: #204728, #202243, #205110)

 -- Philip Blundell <pb@nexus.co.uk>  Tue, 26 Aug 2003 17:27:00 +0100

glibc (2.3.2-3) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
