@@ -53,6 +53,7 @@ locales: $(stamp_install) debian/control $(mkdir)/sysdeps.mk
 	find $(tmpdir)/$@ -name CVS -print -prune | xargs --no-run-if-empty rm -rf
 	dpkg-gencontrol -isp -p$@ -P$(tmpdir)/$@ $($@_control_flags) \
 		-DDepends="glibc-$(DEBVERSION), debconf (>= 0.2.26)"
+	@set -ex ; cd $(tmpdir)/$@ ; find * -type f ! -regex "DEBIAN/.*" | xargs md5sum -- >DEBIAN/md5sums
 	chown -R root:root $(tmpdir)/$@
 	chmod -R go=rX $(tmpdir)/$@
 	dpkg --build $(tmpdir)/$@ ..
