@@ -3,6 +3,12 @@ glibc (2.3.2-5) unstable; urgency=low
   * Phil Blundell <pb@debian.org>
     - debian/control: change section for -pic, -dbg, -prof packages
       from devel to libdevel.
+    - debian/control.in/main: add Build-Depends changes from 2.3.2-3
+      here as well.
+    - debian/packages.d/*.mk: add md5sums for generated packages,
+      thanks to Petr Konecny.  (Closes: #158354)
+    - debian/patches/80_glibc232-locales-header.dpatch: adjust
+      filenames so patch applies correctly.
 
   * GOTO Masanori <gotom@debian.org>
 
